--- a/react-cicd-app/.github/workflows/ci.yml
+++ b/react-cicd-app/.github/workflows/ci.yml
@@ -75,16 +75,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Download build artifacts
-      uses: actions/download-artifact@v3
+    - name: Use Node.js
+      uses: actions/setup-node@v4
       with:
-        name: dist
-        path: dist/
+        node-version: 20.x
+
+    - name: Install Vercel CLI
+      run: npm install -g vercel
 
     - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v25
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        scope: ${{ secrets.VERCEL_ORG_ID }}
+      run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
