--- a/react-cicd-app/.github/workflows/ci.yml
+++ b/react-cicd-app/.github/workflows/ci.yml
@@ -80,8 +80,13 @@ jobs:
       with:
         node-version: 20.x
 
-    - name: Install Vercel CLI
-      run: npm install -g vercel
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build application
+      run: npm run build
 
     - name: Deploy to Vercel
-      run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+      run: |
+        npm install -g vercel
+        vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes
