--- a/react-cicd-app/.github/workflows/ci.yml
+++ b/react-cicd-app/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+defaults:
+  run:
+    working-directory: ./react-cicd-app
+
 jobs:
   test:
     runs-on: ubuntu-latest
