--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: 'react-cicd-app/package-lock.json'
 
     - name: Install dependencies
       run: npm ci
@@ -58,6 +59,7 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
+        cache-dependency-path: 'react-cicd-app/package-lock.json'
 
     - name: Install dependencies
       run: npm ci
